# pipeline_metrics_exporter_mvp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
examples/input/: health_report.json  metrics_report.json  trend_report.json
src/pipeline_metrics_exporter/: __init__.py  _version.py  cli.py  contract.py  csv_exporter.py  excel_exporter.py  export_engine.py  html_exporter.py  markdown_exporter.py  presentation.py  report_io.py  report_loader.py
tests/: test_cli.py  test_contract.py  test_csv_exporter.py  test_excel_exporter.py  test_export_engine.py  test_html_exporter.py  test_markdown_exporter.py  test_package.py  test_report_io.py  test_report_loader.py
