[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pipeline-metrics-exporter"
version = "0.1.0"
description = "Export RADAR_SERVICE metrics, health, and trend reports into portable artifact formats."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RADAR_SERVICE" }
]
keywords = [
  "pipeline",
  "metrics",
  "exporter",
  "observability",
  "csv",
  "markdown",
  "html",
  "excel",
  "radar-service"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_metrics_exporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["pipeline_metrics_exporter"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[project.scripts]
pipeline-metrics-exporter = "pipeline_metrics_exporter.cli:main"
